build: 添加天瓴验证码依赖- 在 properties 中添加 tianai-captcha.version 变量，版本号为 1.5.2 - 在 dependencies 中添加 tianai-captcha-springboot-starter 依赖

--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
             <version>${druid.version}</version>
         </dependency>
 
-        <!-- 综合验证码 -->
+        <!-- 综合验证码 http://doc.captcha.tianai.cloud/ -->
         <dependency>
             <groupId>cloud.tianai.captcha</groupId>
             <artifactId>tianai-captcha-springboot-starter</artifactId>
