feat(system): 添加系统AES加密服务
- 新增ISystemAESService接口和SystemAESService实现类，提供AES加密解密功能
- 在application-dev.yml中添加AES密钥配置
- 新增SystemProperties配置类，用于获取系统配置
- 添加SysUserDTO数据传输对象
- 在测试类中添加生成AES密钥的测试方法

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -48,3 +48,6 @@ spring:
       test-on-return: false
       # 是否对空闲连接进行定期有效性验证
       test-while-idle: true
+system:
+  # AES加密密钥在单元测试中生成
+  aes-secret: dETkH0jmMByH8lxNjtQQhg==
