--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
             <version>${sa-token.version}</version>
         </dependency>
 
+        <!-- Sa-Token OAuth2.0 模块 -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-oauth2</artifactId>
+            <version>${sa-token.version}</version>
+        </dependency>
+
 
         <!-- Redis依赖 -->
         <dependency>
