feat(oauth): 实现 OAuth2.0 认证流程并添加相关功能
- 新增 SysOauthClientDTO、SysOauthClientMapper 和 SysOauthClientService用于管理 OAuth 客户端信息
- 实现 UserinfoScopeHandler 以处理 userinfo scope
- 更新 SAToken 配置，支持 OAuth2.0 认证
- 新增用户注册功能和相关测试
- 优化日志配置和异常处理

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>spring-context-support</artifactId>
         </dependency>
 
+        <!-- SpringWeb模块 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
         <!-- java HuTool 综合工具集 -->
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -92,11 +98,11 @@
         </dependency>
 
         <!-- Sa-Token 整合 Fastjson2 -->
-        <dependency>
-            <groupId>cn.dev33</groupId>
-            <artifactId>sa-token-fastjson2</artifactId>
-            <version>${sa-token.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.dev33</groupId>-->
+<!--            <artifactId>sa-token-fastjson2</artifactId>-->
+<!--            <version>${sa-token.version}</version>-->
+<!--        </dependency>-->
 
         <!-- Sa-Token OAuth2.0 模块 -->
         <dependency>
