--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=server
 spring.profiles.active=dev
+spring.mvc.static-path-pattern=/static/**
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.servlet.mvc=TRACE
